# SysScope

./: .gitignore  README.md  SysScope.spec  goal.md  plan.md  pyproject.toml  task.md
.github/workflows/: release.yml  test.yml
installer/windows/: SysScope.iss
src/sysscope/: __init__.py  __main__.py  app.py  config.py  history.py  models.py  timekeeping.py  worker.py
src/sysscope/collectors/: __init__.py  base.py  native.py  wsl.py
src/sysscope/ui/: main_window.py
tests/: test_config.py  test_history.py  test_native_collector.py  test_timekeeping.py  test_ui.py  test_wsl_collector.py
