[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysscope"
version = "1.0.0"
description = "A compact native system monitoring HUD for Windows and Linux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psutil>=5.9.8",
    "PySide6>=6.7.0",
    "pyqtgraph>=0.13.7",
    "nvidia-ml-py>=12.535.133",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pyinstaller>=6.7.0",
]

[project.scripts]
sysscope = "sysscope.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
qt_api = "pyside6"

